Set Navigation bar's SKEDD button to redirect to landing or home page based on authentication status.  fixed bug where input text was not visible for login and register

--- a/source/static/login.css
+++ b/source/static/login.css
@@ -13,8 +13,11 @@ h1.LOGIN_title {
   	margin: auto;
   	border-radius:4px;
   	box-shadow:0 4px 10px 4px rgba(0,0,0,0.19);
-  	color: white;
+}
 
+label[for="LOGIN_register-redirect"] {
+	text-align: center;
+	color:white;
 }
 
 .LOGIN_btn-btn-success {
